--- a/web-site/modelo2/style.css
+++ b/web-site/modelo2/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: monospace, sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     list-style: none;
 
@@ -12,8 +14,8 @@
 :root {
     --bg-color: #101113;
     --text-color: #fff;
-    --main-color: #ffb411;
-    --other-color: #858181;
+    --main-color: #ffdb11;
+    --other-color: #f1ebeb;
     --h1-font: 5rem;
     --p-font: 1rem;
 
@@ -22,7 +24,7 @@
 /* ==================== Header ======================= */
 
 body{
-    background: radial-gradient( 50.53% 50.53% at 50.23% 49.47%,  #232425 0%, #0c0c0c 100%);
+    background: radial-gradient( 50.53% 50.53% at 50.23% 49.47%,  #ff9f45 0%, #f58e6f 100%);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: center;
@@ -47,8 +49,9 @@ header{
     display: flex;
     align-items: center;
     color: var(--main-color);
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
+    text-transform: uppercase;
 }
 
 .logo i {
@@ -109,8 +112,15 @@ section {
     gap: 2rem;
 }
 
+.home-img img {
+    display: block;
+    max-width: 90%;
+}
+
+
 .home-text h1{
     font-size: var(--h1-font);
+    text-transform: uppercase;
     line-height: 1.2;
     margin-bottom: 20px;
 }
