--- a/web-site/modelo6/style.css
+++ b/web-site/modelo6/style.css
@@ -12,10 +12,12 @@
 /* ------ fonts colors--------- */
 
 :root {
-    --text-font: 1.1rem;
-    --title-font: 2.4rem;
+    --text-font: 1.2rem;
+    --text-logo: 2.2rem;
+    --title-font: 3.4rem;
     --bg-primary: linear-gradient(45deg, #ae00ff, #e00384);
     --bg-secundary: linear-gradient(55deg, #d400ff, #0312e0);
+    --text-color-t: #d400ff;
     --sub-color: #a8a4a4;
     --text-color: #ffffff;
     --bg-color: #101113;
@@ -27,13 +29,14 @@
 
 html,
 body {
-    width: 100vw;
+    max-width: 100vW;
     height: 100%;
     background-image: url(https://source.unsplash.com/1600x800/?tecnology);
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: center;
-    background-color: rgba(39, 39, 39, .7);
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.623);
     background-blend-mode: color-burn;
 }
 
@@ -53,16 +56,16 @@ header {
 
 .logo {
     display: flex;
-    color: #d400ff;
+    color: var(--text-color-t);
     align-items: center;
-    font-size: var(--title-font);
+    font-size: var(--text-logo);
     font-weight: 800;
     text-decoration: none;
     text-transform: uppercase;
 }
 
 .logo i {
-    color:#d400ff;
+    color:var(--text-color-t);
     font-size: 40px;
     font-weight: 800;
     margin-right: 10px;
@@ -83,13 +86,12 @@ header {
 
 .navbar .active{
     padding: 8px;
-    color:#d400ff;
+    color:var(--text-color-t);
     border: 2px solid #d400ff;
 }
 
 .navbar a:hover {
-    color: #d400ff;
-}
+    color:var(--text-color-t);}
 
 /* -------------- banner --------------- */
 
